@@ -2,12 +2,12 @@ Source: pymongo
 Section: python
 Priority: optional
 Maintainer: Federico Ceratto <federico.ceratto@gmail.com>
-Build-Depends: debhelper (>= 8.0.0~)
- , python-all-dev
- , python-support (>= 0.90.0~)
- , python-setuptools (>= 0.6.14)
- , python-sphinx
+Build-Depends: debhelper (>= 8.0.0~),
+ python-all-dev,
+ python-setuptools (>= 0.6.14),
+ python-sphinx
 Standards-Version: 3.9.1
+XS-Python-Version: >= 2.5
 Homepage: http://api.mongodb.org/python/
 Vcs-Git: git://git.debian.org/git/collab-maint/pymongo.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/pymongo.git
@@ -15,6 +15,9 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/pymongo.git
 Package: python-pymongo
 Architecture: any
 Depends: python-bson (>= ${source:Version}), ${shlibs:Depends}, ${python:Depends}, ${misc:Depends}
+Recommends: python-gridfs (>= ${source:Version})
+Provides: ${python:Provides}
+XB-Python-Version: ${python:Versions}
 Description: Python interface to the MongoDB document-oriented database
  MongoDB is a high-performance, open source, schema-free
  document-oriented data store. Pymongo provides an interface
@@ -34,6 +37,8 @@ Description: Python interface to the MongoDB document-oriented database (documen
 Package: python-gridfs
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}
+Provides: ${python:Provides}
+XB-Python-Version: ${python:Versions}
 Description: Python implementation of GridFS for MongoDB
  GridFS is a storage specification for large objects in MongoDB.
  The Python gridfs module is an implementation based
@@ -47,11 +52,4 @@ XB-Python-Version: ${python:Versions}
 Description: Python implementation of BSON for MongoDB
  BSON Python module contains all of the Binary JSON encoding and decoding
  logic for MongoDB.
-
-
-
-
-
-
-
 
