@@ -1,1 +1,1 @@
-usr/lib/python*/*-packages/bson
+usr/lib/python*/*-packages/bson*
