@@ -1,1 +1,1 @@
-usr/lib/python*/*-packages/gridfs
+usr/lib/python*/*-packages/gridfs*
