@@ -1,1 +1,1 @@
-usr/lib/python*/*-packages/pymongo
+usr/lib/python*/*-packages/pymongo*
