@@ -1,1 +1,1 @@
-pyversions:2.5-
+2.5-
