@@ -1,16 +1,9 @@
 #!/usr/bin/make -f
-unexport CPPFLAGS
-unexport CFLAGS
-unexport CXXFLAGS
-unexport FFLAGS
-unexport LDFLAGS
-
-export DH_VERBOSE=1
 
 PREFIX = /usr
 
 %:
-	dh  $@
+	dh $@ --with python2
 
 override_dh_auto_build:
 	dh_auto_build
@@ -28,4 +21,3 @@ override_dh_auto_clean:
 	rm -rf debian/html changelog
 	find doc -name "*.pyc" -exec rm -rf {} +
 	dh_auto_clean
-
